# semver-ci

./: .gitignore  Cargo.toml  Dockerfile  README.md  debug.Dockerfile  rust-toolchain.toml
.github/: CONTRIBUTING.md
.github/workflows/: development.yml  lint.yml  publish.yml  publish_debug.yml  release.yml
src/: commands.rs  config.rs  default_error.rs  git_repo.rs  git_service.rs  github_action.rs  gitlab_ci.rs  http_service.rs  main.rs  pipeline.rs  pipelines.rs  release.rs  semantic_version.rs  version_command.rs
src/commands/: release_command.rs  scope_command.rs  tag_command.rs  version_command.rs
src/pipelines/: git_repo.rs  github_actions.rs  gitlab_ci.rs
tests/: scope_cli.rs  version_matrix.rs
