[package]
name = "svci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive", "env"] }
dotenv = "0.15.0"
git2 = { version = "0.18.1", features = ["vendored-libgit2", "vendored-openssl", "zlib-ng-compat"] }
regex = "1.10.2"
