[package]
name = "svci"
version = "0.9.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive", "env"] }
dotenv = "0.15.0"
git2 = { version = "0.18.1", features = ["vendored-libgit2", "vendored-openssl", "zlib-ng-compat"] }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.5"
log = "0.4.22"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
